sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:9: error: not found: value j
			if (plusPetit(j+1, j)){
                                      ^AlgCocktailSort1:10: error: not found: value j
				echange(j+1,j);
                                        ^AlgCocktailSort1:15: error: value by is not a member of Int
		for(j <- getNombreValeurs()-2 by -1){
                                              ^