sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var stop : Boolean = false;
	
	while(!stop){
		stop = true;
		
		for (i <- 0 to getNombreValeurs()-2){
			if (plusPetit(j+1, j)){
				echange(j+1,j);
				stop = false;
			}
		}
			
		for(j <- getNombreValeurs()-2 by -1){
			if (plusPetit(j+1, j)){
				echange(j+1,j);
				stop = false;
			}	
		}
	}
}


/*Faire
  Pour tout i dans [0,lgr-2], faire:
    si i et i+1 doivent être échangées, le faire
  Pour tout i dans [lgr-2,0] en descendant, faire:
    si i et i+1 doivent être échangées, le faire
tant qu'au moins l'un des parcours a inversé un élément*/